# Diannot

./: .dockerignore  .gitattributes  .gitignore  .graphifyignore  CLAUDE.md  DISTRIBUTING.md  Dockerfile  GUIDE.md  PROJECT_DOSSIER.md  README.md  diannot.toml  diannot_studio.spec  pyproject.toml  studio_main.py
.github/workflows/: ci.yml  release-verify.yml
design/: Diannot Note.html  Diannot Shell.html
docs/: RELEASE.md
docs/phase-plans/: 02-vision-dataloss-parity.md  03-release-integrity.md  04-broader-ui-tests.md  05-export-render-tests.md  06-provider-resilience.md  07-accessibility-part2.md
examples/: circulatory.json  pmls_circulatory.note.json  pmls_circulatory.txt
examples/sample_notebook/: 01_blood.note.json  02_tissues.note.json
installer/: diannot.iss
scripts/: add_embed_keys.py  gen_release_key.py  make_icon.py  make_manifest.py  make_release.py  verify_release.py
src/diannot/: __init__.py  a11y.py  anki.py  cards.py  cli.py  config.py  editor.py  export.py  glossary.py  ingest.py  io_utils.py  models.py  pipeline.py  providers.py  quiz.py  render.py  search.py  srs.py  structure.py  themegen.py
src/diannot/assets/packs/pro_infographic/: base.css  fonts.toml  template.html.j2
src/diannot/assets/packs/study_notes/: base.css  fonts.toml  template.html.j2
src/diannot/studio/: __init__.py  _canvasjs.py  _editorjs.py  app.py  background.py  canvasedit.py  credentials.py  docedit.py  errors.py  layout.py  onboarding.py  previews.py  styles.py  updater.py  usage.py  workspace.py
src/diannot/studio/pages/: __init__.py  help.py  home.py  import_.py  note.py  review_all.py  search.py  settings.py  study.py  study_coming_soon.py
src/diannot/themes/: biochemistry.toml  circulatory.toml  ethics.toml  histology.toml  immunology.toml  lab_management.toml  lab_safety.toml  quality.toml  skeletal.toml  von.toml
tests/: test_a11y.py  test_batch_import.py  test_canvasedit.py  test_chunking.py  test_claude_cli.py  test_claude_errors.py  test_cli.py  test_docedit.py  test_export_smoke.py  test_fragment.py  test_friendly_errors.py  test_future_schema_smoke.py  test_ingest.py  test_ingestion_robustness.py  test_key_pool.py  test_layout.py  test_looks_broken.py  test_math.py  test_models.py  test_note_snippet.py  test_onboarding.py  test_onboarding_smoke.py  test_overflow_bisect.py  test_providers.py  test_render.py  test_render_selfcontained.py  test_retry_smoke.py  test_safety.py  test_schema_version.py  test_search.py  test_settings_engines.py  test_structure.py  test_structure_fallback.py  test_study.py  test_study_gating.py  test_themegen.py  test_updater.py  test_updater_integrity.py  test_upload_route.py  test_usage.py  (+3 more)
tests/fixtures/notes/: future_v999.note.json  legacy_kitchen_sink.note.json
