[project]
name = "diannot"
version = "0.1.0"
description = "Local-first AI study-notes app that renders beautifully styled, aesthetic study notes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Diannot contributors" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "typer>=0.12",
    "pymupdf>=1.24",
    "playwright>=1.44",
    "claude-agent-sdk",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
# Offline OCR fallback. Also requires the Tesseract binary on PATH.
ocr = ["pytesseract>=0.3.10", "pillow>=10.0"]
# Interactive editor (Phase 3).
editor = ["nicegui>=2.0"]
# Anki .apkg export (Phase 4).
anki = ["genanki>=0.13"]

[project.scripts]
diannot = "diannot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diannot"]

[tool.uv]
# Dev workflow: `uv sync` then `uv run playwright install chromium`.
