[project]
name = "diannot"
version = "0.1.0"
description = "Local-first AI study-notes app that renders beautifully styled, aesthetic study notes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Diannot contributors" }]
keywords = ["study-notes", "flashcards", "spaced-repetition", "anki", "claude", "ai", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "typer>=0.12",
    "pymupdf>=1.24",
    "playwright>=1.44",
    "claude-agent-sdk",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    # Ed25519 signing/verification for the self-update integrity gate (studio/updater.py). Ed25519
    # isn't in the stdlib; this is the one well-maintained dep for it.
    "cryptography>=42",
]

[project.optional-dependencies]
# Offline OCR fallback. Also requires the Tesseract binary on PATH.
ocr = ["pytesseract>=0.3.10", "pillow>=10.0"]
# Interactive editor (Phase 3).
editor = ["nicegui>=2.0"]
# Diannot Studio — the full front-end app (native window via pywebview, or browser).
gui = ["nicegui>=2.0", "pywebview>=5"]
# Anki .apkg export (Phase 4).
anki = ["genanki>=0.13"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "pyinstaller>=6"]

[project.scripts]
diannot = "diannot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diannot"]

[tool.uv]
# Dev workflow: `uv sync` then `uv run playwright install chromium`.

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The real-Chromium subprocess smoke tests contend with each other (port/resource) when interleaved,
# so they are DESELECTED from the default run and executed one-at-a-time in a dedicated CI job
# (`pytest -o addopts= tests/<smoke>.py`). `pytest -q` locally stays fast and needs no Chromium.
markers = [
    "browser: real-Chromium subprocess UI smoke test (run serially; deselected by default)",
]
addopts = "-m 'not browser'"
